--- a/public/index.html
+++ b/public/index.html
@@ -264,6 +264,8 @@
     es.onmessage = (ev) => {
       let msg; try { msg = JSON.parse(ev.data); } catch { return; }
       setStatus(msg);
+      
+      if (msg.type === 'heartbeat') return;
 
       if (msg.type === 'snapshot') {
         lastSnapshot = msg;
