--- a/public/index.html
+++ b/public/index.html
@@ -56,6 +56,13 @@
           <input id="qCode" placeholder="可留空" style="flex:1">
         </div>
         <div id="qBreak" class="mono" style="white-space:pre-line; background:#0f1524;border:1px solid #334154;border-radius:8px;padding:8px"></div>
+        <div class="row" style="margin-bottom:4px">
+          <label style="min-width:80px">兑换码</label>
+          <input id="qCode" placeholder="可留空" style="flex:1">
+        </div>
+        <div class="muted" style="margin-bottom:8px">
+          提示：输入 <b>12345678</b> 可享受 100% 折扣（免费）
+        </div>
         <div class="row" style="justify-content:flex-end;margin-top:12px">
           <button id="qCancel">取消</button>
           <button id="qOk">开始下载</button>
