--- a/public/index.html
+++ b/public/index.html
@@ -59,9 +59,8 @@
           <label style="min-width:80px">兑换码</label>
           <input id="qCode" placeholder="可留空" style="flex:1">
         </div>
-        <div class="muted" style="margin-bottom:8px">
-          提示：输入 <b>12345678</b> 可享受 100% 折扣（免费）
-        </div>
+
+        <div class="muted" style="color:#6ee7b7; font-weight:600; margin-bottom:8px">🎁 输入 <b>12345678</b> 可免单（100% 折扣）</div>
     
         <!-- 试算结果区域（必须保留，JS 会写入这里） -->
         <div id="qBreak" class="mono"
