--- a/public/index.html
+++ b/public/index.html
@@ -599,9 +599,9 @@
 </script>
 
   <div id="buildInfo" style="text-align:center; color:#999; font-size:12px; margin-top:20px;"></div>
-<!--   <script>
+  <script>
     document.getElementById('buildInfo').textContent =
       '最后修改时间：' + document.lastModified;
-  </script> -->
+  </script>
 </body>
 </html>
